--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
     </head>
     <body>
         <h1>File to Link</h1>
-        <form action=""
+        <form action="link.html" method="GET">
+            <input type="text" name="dir" required="required" placeholder="Folder Path">
+            <input type="checkbox" name="file" value="true">
+            <input type="submit" value="Get Link">
+        </form>
     </body>
 </html>
