--- a/link.html
+++ b/link.html
@@ -1,1 +1,30 @@
-
+<html>
+    <head>
+        <title>File to Link</title>
+    </head>
+    <body>
+        <h1>File to Link</h1>
+        Loading...
+        <script>
+            document.write("JavaScript started");
+            var params = (function() {
+    			var a, b;
+    			var c = {};
+    			for (a in window.document.location.search.split("?")[1].split("&")) {
+    				b = a.split("=");
+    				if (!c[b[0]]) {
+    				    c[b[0]]=b[1];
+    				} else {
+    				    if (typeof c[b[0]] == "string") {
+    				        c[b[0]] = [c[b[0]], b[1]];
+    				    } else {
+    				        c[b[0]].push(b[1]);
+    				    }
+    				}
+    			}
+			    return c;
+		    })();
+		    document.write("Parameters saved to var params");
+        </script>
+    </body>
+</html>
